<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.view.fragments.OverviewFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/back">

        <LinearLayout
            android:id="@+id/ll_client_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:background="@color/white"
            android:orientation="horizontal"
            android:weightSum="1"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_weight="0.5"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/customer_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/customer_info"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_client_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/customer_preview" />

                    <LinearLayout
                        android:id="@+id/ll_phone_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:orientation="horizontal"
                        app:layout_constraintStart_toEndOf="@id/tv_client_name"
                        app:layout_constraintTop_toBottomOf="@id/customer_label">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/ic_phone_24" />

                        <TextView
                            android:id="@+id/tv_phone"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/phone_preview" />
                    </LinearLayout>
                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_scheduled_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/scheduled_for"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/tv_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:text="@string/fecha_preview"/>
                    <TextView
                        android:id="@+id/tv_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/time_preview"/>
                </androidx.appcompat.widget.LinearLayoutCompat>


            </LinearLayout>
        </LinearLayout>

        <View
            android:id="@+id/v_first_divider"
            android:layout_width="match_parent"
            android:layout_height="0.8dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:background="@color/divider"
            app:layout_constraintTop_toBottomOf="@id/ll_client_data" />

        <LinearLayout
            android:id="@+id/ll_ticket_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@color/white"
            android:orientation="horizontal"
            android:weightSum="1"
            app:layout_constraintTop_toBottomOf="@id/v_first_divider"
            tools:layout_editor_absoluteX="0dp">

            <LinearLayout
                android:id="@+id/ll_address"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="0.5"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/ic_location_on_24" />

                    <TextView
                        android:id="@+id/tv_address_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/job_site_address" />
                </LinearLayout>

                <TextView
                    android:id="@+id/tv_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:text="@string/phone_preview" />

                <Button
                    android:id="@+id/btn_directions"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="10dp"
                    android:backgroundTint="@color/primary"
                    android:text="@string/get_directions"
                    android:textColor="@color/white" />
            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/divider" />

            <LinearLayout
                android:id="@+id/ll_notes"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="0.5"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/ic_note_24" />

                    <TextView
                        android:id="@+id/tv_notes_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/dispatch_notes" />
                </LinearLayout>

                <TextView
                    android:id="@+id/tv_notes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:text="@string/phone_preview" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginEnd="20dp"
                    android:background="@color/divider" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="30dp"
                            android:layout_marginTop="10dp"
                            android:text="@string/dept_class" />

                        <TextView
                            android:id="@+id/tv_dept_class"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:layout_marginStart="5dp"
                            android:text="@string/customer_preview" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:text="@string/service_type" />

                        <TextView
                            android:id="@+id/tv_service_type"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:layout_marginStart="5dp"
                            android:text="@string/customer_preview" />
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:background="@color/white"
            android:orientation="horizontal"
            android:weightSum="1"
            app:layout_constraintTop_toBottomOf="@id/ll_ticket_data">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_weight="0.2"
                android:gravity="center_horizontal"
                android:text="Reason for Call: " />

            <TextView
                android:id="@+id/tv_reason_call"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="0.6"
                android:text="@string/phone_preview" />

            <TextView
                android:id="@+id/ticket_number"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:layout_marginEnd="10dp"
                android:text="@string/phone_preview"/>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>