<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.view.LoginActivity">
    <LinearLayout
        android:id="@+id/ll_login_form"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_gravity="center"
            android:layout_width="400dp"
            android:background="@drawable/acme_logo"
            android:layout_height="200dp"/>
        <LinearLayout
            android:layout_gravity="center"
            android:background="@drawable/btn_outline"
            android:orientation="horizontal"
            android:layout_width="400dp"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_person_outline_24"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <EditText
                android:id="@+id/et_username"
                android:hint="@string/username"
                android:backgroundTint="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:background="@drawable/btn_outline"
            android:orientation="horizontal"
            android:layout_width="400dp"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_lock_24"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <EditText
                android:id="@+id/et_password"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:backgroundTint="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/btn_login"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:layout_width="400dp"
            android:text="@string/login"
            android:background="@drawable/btn_normal_selector"
            android:layout_height="50dp"
            android:orientation="horizontal" >
            <TextView
                android:id="@+id/btn_login_text"
                android:text="Login"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <ProgressBar
                android:id="@+id/btn_login_pb"
                android:visibility="gone"
                android:layout_gravity="center"
                android:gravity="center"
                android:indeterminate="true"
                android:indeterminateTintMode="src_atop"
                android:indeterminateTint="@color/white"
                android:textColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>